--- a/DragonWar.LobbyClient/App.xaml
+++ b/DragonWar.LobbyClient/App.xaml
@@ -1,7 +1,8 @@
 ﻿<Application x:Class="DragonWar.LobbyClient.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="DragonWar.LobbyClient.GUI.Windows"
+             StartupUri="GUI/Windows/StartForm.xaml">
     <Application.Resources>
          
     </Application.Resources>
